Prompts 9.4 and 9.4.a, 9.4.b
